@@ -73,9 +73,6 @@ private:
 
 	peer_callback_t m_callback;
 
-	// current retry count
-	int m_retry_count;
-
 	// the udp socket used to send and receive
 	// multicast messages on
 	broadcast_socket m_socket;
@@ -83,6 +80,16 @@ private:
 	// used to resend udp packets in case
 	// they time out
 	deadline_timer m_broadcast_timer;
+
+	// current retry count
+	boost::uint32_t m_retry_count;
+
+	// this is a random (presumably unique)
+	// ID for this LSD node. It is used to
+	// ignore our own broadcast messages.
+	// There's no point in adding ourselves
+	// as a peer
+	int m_cookie;
 
 	bool m_disabled;
 #if defined(TORRENT_LOGGING) || defined(TORRENT_VERBOSE_LOGGING)
